fix(home-instagram): set title overflow to be visible

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -1137,6 +1137,8 @@
 
   .tuf-section-title {
     color: $tuf-color-primary-light;
+
+    overflow: visible;
   }
 
   &__list {
